add asset type & budget doc api
