# backend/controllers/AssetType_controller.go
@@ -1,14 +1,23 @@
 package controllers
 
 import (
-	"github.com/gin-gonic/gin"
-	jwt "github.com/appleboy/gin-jwt/v2"
+	"golang-fixedasset-mongo-backend/backend/dto"
 	"golang-fixedasset-mongo-backend/backend/models"
 	"golang-fixedasset-mongo-backend/backend/services"
-	"golang-fixedasset-mongo-backend/backend/dto"
 	"net/http"
+
+	jwt "github.com/appleboy/gin-jwt/v2"
+	"github.com/gin-gonic/gin"
 )
 
+// @Summary      Create one Asset Type record
+// @Description  Create one Asset Type record
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Param        request  body      models.AssetTypes  true  "Asset Type Request Body"
+// @Success      200      {object}  dto.GeneralCreateResponseBody
+// @Router      /asset/type/create [post]
 func CreateAssetType(c *gin.Context) {
 	var assetType models.AssetTypes
 	if err := c.ShouldBindJSON(&assetType); err != nil {
@@ -25,6 +34,14 @@ func CreateAssetType(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary      Get one Asset Type record by id
+// @Description  Get one Asset Type record by id
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "Asset Type ID"
+// @Success      200      {object}  models.AssetTypes
+// @Router       /asset/type/one/{id} [get]
 func GetAssetTypeById(c *gin.Context) {
 	id := c.Param("id")
 	result, err := services.GetOneAssetType(id)
@@ -35,6 +52,14 @@ func GetAssetTypeById(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary      Delete one Asset Type record by id
+// @Description  Delete one Asset Type record by id
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Param        id   path      string  true  "Asset Type ID"
+// @Success      200      {object}  dto.GeneralUpdateInactiveResponseBody
+// @Router      /asset/type/void/{id} [delete]
 func InactiveAssetType(c *gin.Context) {
 	id := c.Param("id")
 	result, err := services.VoidOneAssetType(id)
@@ -42,9 +67,17 @@ func InactiveAssetType(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, gin.H{"message": "Asset Type inactivated successfully", "data": result })
+	c.JSON(http.StatusOK, gin.H{"message": "Asset Type inactivated successfully", "data": result})
 }
 
+// @Summary      Update one Asset Type record
+// @Description  Update one Asset Type record
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Param        request  body      models.AssetTypes  true  "Asset Type Request Body for update"
+// @Success      200      {object}  dto.GeneralUpdateInactiveResponseBody
+// @Router      /asset/type/update [post]
 func UpdateAssetType(c *gin.Context) {
 	var assetType models.AssetTypes
 	if err := c.ShouldBindJSON(&assetType); err != nil {
@@ -61,6 +94,13 @@ func UpdateAssetType(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary      Get one Asset Type records
+// @Description  Get one Asset Type records
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Success      200      {object}  []models.AssetTypes
+// @Router       /asset/type/all [get]
 func GetAssetTypes(c *gin.Context) {
 	assetTypes, err := services.ListAllAssetType()
 	if err != nil {
@@ -70,6 +110,14 @@ func GetAssetTypes(c *gin.Context) {
 	c.JSON(http.StatusOK, assetTypes)
 }
 
+// @Summary      List Asset Types
+// @Description  List Asset Types
+// @Tags         Asset Type
+// @Accept       json
+// @Produce      json
+// @Param        request  body      dto.AssetTypeListDto  true  "List Action Record Request Body"
+// @Success      200      {object}  dto.AssetTypeList
+// @Router       /asset/type/list [post]
 func ListPageAssetTypes(c *gin.Context) {
 	var assetTypePageDto dto.AssetTypeListDto
 	if err := c.ShouldBindJSON(&assetTypePageDto); err != nil {
